--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ server.port=${PORT:0}
 #Se genera un id de instancia random en eureka con el nombre de la aplicacion
 eureka.instance.instance-id=${spring.application.name}:${spring.aplication.instance_id:${random.value}}
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
