La entidad Producto se toma desde libreria Commons

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,14 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		
+		<!-- Libreria creada en proyecto commons -->
+		<dependency>
+			<groupId>com.micro.springboot.app.commons</groupId>
+			<artifactId>springboot-servicio-commons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
